# AuroraFlow

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  aurora_flow.mk  aurora_flow_test_hw_emu.cfg  aurora_flow_test_sw_emu.cfg  env.sh  host_aurora_flow_ring
cmake/: FindAuroraFlow.cmake
emulation/: env.sh
hls/: aurora_file_link.cpp  aurora_flow_emu.cpp  aurora_flow_sw_emu.cpp  send_recv.cpp
host/: Aurora.hpp  AuroraFlow.hpp  Configuration.hpp  Kernel.hpp  Results.hpp  host_aurora_flow_ring.cpp  host_aurora_flow_test.cpp
include/: AuroraFlow.hpp
rtl/: aurora_flow.v.template.v  aurora_flow_configuration.v  aurora_flow_configuration_tb.v  aurora_flow_control_s_axi.v  aurora_flow_dpi.c  aurora_flow_gt_stub.sv  aurora_flow_hw_emu.v.template.v  aurora_flow_hw_emu_0.v  aurora_flow_hw_emu_1.v  aurora_flow_io.v  aurora_flow_monitor.v  aurora_flow_monitor_tb.v  aurora_flow_nfc.v  aurora_flow_nfc_tb.v  aurora_flow_reset.v
scripts/: configure_loopback_emu.sh  configure_loopback_sw_emu.sh  configure_pair_emu.sh  configure_ring_emu.sh  hw_emu_rank_wrapper.sh  patch_hw_emu_dpi.sh  run_loopback.sh  run_loopback_emu.sh  run_loopback_hw.sh  run_loopback_sw_emu.sh  run_over_all_configs.sh  run_pair.sh  run_pair_emu.sh  run_pair_hw.sh  run_pair_pressure.sh  run_pair_sw_emu.sh  run_ring_emu.sh  run_ring_hw.sh  run_ring_sw_emu.sh  run_ring_template.sh  run_sw_emu.sh  synth.sh  synth_all.sh
tcl/: create_aurora_ip.tcl  create_axis_dwidth_converter_ip.tcl  create_fifo_ip.tcl  pack_kernel.tcl  pack_kernel_hw_emu.tcl
test/: .gitignore  CMakeLists.txt  Makefile  README.md
test/cfg/: aurora_flow_test_sw_emu.cfg
test/hls/: recv.cpp  send.cpp
test/host/: Configuration.hpp
test/scripts/: collect_all.sh  configure_loopback_emu.sh  configure_pair_emu.sh  configure_ring_emu.sh  for_every_node.sh  hw_emu_rank_wrapper.sh  rank_wrapper.sh  run_loopback_emu.sh  run_loopback_hw.sh  run_over_all_configs.sh  run_pair_emu.sh  run_pair_hw.sh  run_ring_emu.sh  run_ring_hw.sh  synth.sh  synth_all.sh
